# Changelog
All notable changes to this project will be documented in this file.
Started date: 2020-15-08

## [1.0.0] - 2020-15-08
### Added
- Added structure for the Connect Hub

### Changed
- 

### Removed
- 

### Fixed
-

### Bugs
-

### To proceed
-

#####################################################################